[project]
name = "px2xy"
version = "1.0.1"
description = "Centroid Finder GUI for image-based centroid extraction"
authors = [{name = "YourFirstName YourLastName", email = "you@example.com"}]
licenses = [{file = "LICENSE"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "PyQt5"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
